consensusj-jsonrpc: JavaDoc and minor code cleanup